force-app/main/default/objects/Opportunity/fields/FAC_Waiver__c.field-meta.xml
<CustomField>
    <fullName>FAC_Waiver__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>FAC Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Ballistic Missile Defense Program</fullName>
            </value>
            <value>
                <fullName>Counter Terrorism and Homeland Security</fullName>
            </value>
            <value>
                <fullName>Department of Defense Counter Proliferation</fullName>
            </value>
            <value>
                <fullName>Department of Defense Joint Advanced Strike Technology Program</fullName>
            </value>
            <value>
                <fullName>Department of Homeland Security</fullName>
            </value>
            <value>
                <fullName>Institutions of higher education</fullName>
            </value>
            <value>
                <fullName>Intergovernmental Personnel Act Assignments</fullName>
            </value>
            <value>
                <fullName>National Institutes of Health (NIH)</fullName>
            </value>
            <value>
                <fullName>National Reconnaissance Office</fullName>
            </value>
            <value>
                <fullName>Naval Reactors</fullName>
            </value>
            <value>
                <fullName>Non-Nuclear Munitions Technology Program</fullName>
            </value>
            <value>
                <fullName>Non-Profit Entities</fullName>
            </value>
            <value>
                <fullName>Small business</fullName>
            </value>
            <value>
                <fullName>State and local governments</fullName>
            </value>
            <value>
                <fullName>Strategic Environmental Research and Development Program (SERDP)</fullName>
            </value>
            <value>
                <fullName>US Enrichment Corporation</fullName>
            </value>
            <value>
                <fullName>US Nuclear Detonation Detection System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>