force-app/main/default/objects/Opportunity/fields/Facility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Facility_Requirements__c</fullName>
    <label>Facility Requirements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>