force-app/main/default/objects/Opportunity/fields/FFRDC__c.field-meta.xml
<CustomField>
    <fullName>FFRDC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is a Federal Funded Research &amp; Development Center document required?</inlineHelpText>
    <label>FFRDC?</label>
    <type>Checkbox</type>
</CustomField>