force-app/main/default/objects/Opportunity/fields/Field_Work_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Field_Work_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is a Field Work Proposal required?</inlineHelpText>
    <label>Field Work Proposal</label>
    <type>Checkbox</type>
</CustomField>