force-app/main/default/objects/Opportunity/fields/Foreign_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Sponsor__c</fullName>
    <label>Foreign Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No__gvs</valueSetName>
    </valueSet>
</CustomField>