force-app/main/default/objects/Opportunity/fields/Foreign_Travel__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign Travel</label>
    <type>Checkbox</type>
</CustomField>