force-app/main/default/objects/Opportunity/fields/ForeignTravel__c.field-meta.xml
<CustomField>
    <fullName>ForeignTravel__c</fullName>
    <label>Foreign Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>