force-app/main/default/objects/Opportunity/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <label>Fund Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>