force-app/main/default/objects/Opportunity/fields/Funding_Agreement_Total__c.field-meta.xml
<CustomField>
    <fullName>Funding_Agreement_Total__c</fullName>
    <label>Funding Agreement Total</label>
    <summarizedField>Funding_Agreement__c.Revised_Amount__c</summarizedField>
    <summaryForeignKey>Funding_Agreement__c.Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>