force-app/main/default/objects/Opportunity/fields/Funding_Client__c.field-meta.xml
<CustomField>
    <fullName>Funding_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Client</relationshipLabel>
    <relationshipName>Funding_Client</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>