force-app/main/default/objects/Opportunity/fields/Future_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Future_Accomplishments__c</fullName>
    <label>Future Accomplishments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>