force-app/main/default/objects/Opportunity/fields/FWP__c.field-meta.xml
<CustomField>
    <fullName>FWP__c</fullName>
    <defaultValue>&quot;NO&quot;</defaultValue>
    <inlineHelpText>Is a Field Work Proposal required?</inlineHelpText>
    <label>FWP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>