force-app/main/default/objects/Opportunity/fields/FY_2023__c.field-meta.xml
<CustomField>
    <fullName>FY_2023__c</fullName>
    <inlineHelpText>Proposed Milestone Dollars in 2023</inlineHelpText>
    <label>FY 2023</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>