force-app/main/default/objects/Opportunity/fields/FY_2024__c.field-meta.xml
<CustomField>
    <fullName>FY_2024__c</fullName>
    <inlineHelpText>Proposed Milestone Dollars in 2024</inlineHelpText>
    <label>FY 2024</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>