force-app/main/default/objects/Opportunity/fields/FY_2025__c.field-meta.xml
<CustomField>
    <fullName>FY_2025__c</fullName>
    <inlineHelpText>Proposed Milestone Dollars in 2025</inlineHelpText>
    <label>FY 2025</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>