force-app/main/default/objects/Opportunity/fields/Have_Objectives_Changed__c.field-meta.xml
<CustomField>
    <fullName>Have_Objectives_Changed__c</fullName>
    <inlineHelpText>Have the Objectives for this Amendment changed from the previous action?</inlineHelpText>
    <label>Have Objectives Changed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>