force-app/main/default/objects/Opportunity/fields/Headquarters_Operations_Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Operations_Office_Manager__c</fullName>
    <label>Headquarters/Operations Office Manager</label>
    <length>20</length>
    <type>Text</type>
</CustomField>