force-app/main/default/objects/Opportunity/fields/Headquarters_Organization__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Organization__c</fullName>
    <label>Headquarters Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Non Lead</fullName>
            </value>
            <value>
                <fullName>1 - Lead</fullName>
            </value>
            <value>
                <fullName
        >AR-1 - Advanced Research Projects Agency - (ARPA-E)</fullName>
                <label
        >AR-1 - Advanced Research Projects Agency - (ARPA-E)</label>
            </value>
            <value>
                <fullName
        >EE-12 - Office of Technology Advancement and Outreach</fullName>
                <label
        >EE-12 - Office of Technology Advancement and Outreach</label>
            </value>
            <value>
                <fullName>EE-13 - Office of Strategic Programs</fullName>
            </value>
            <value>
                <fullName>EE-20 - DAS for Technology Development</fullName>
            </value>
            <value>
                <fullName>EE-2A - Solar Technologies Program</fullName>
            </value>
            <value>
                <fullName
        >EE-2B - Office of Wind and Hydropower Technologies Program</fullName>
                <label
        >EE-2B - Office of Wind and Hydropower Technologies Program</label>
            </value>
            <value>
                <fullName
        >EE-2C - Office of Geothermal Technologies Program</fullName>
                <label>EE-2C - Office of Geothermal Technologies Program</label>
            </value>
            <value>
                <fullName>EE-2D - Distributed Energy Program</fullName>
            </value>
            <value>
                <fullName>EE-2E - Office of Biomass Program</fullName>
            </value>
            <value>
                <fullName
        >EE-2F - Office of Advanced Manufacturing Program</fullName>
                <label>EE-2F - Office of Advanced Manufacturing Program</label>
            </value>
            <value>
                <fullName
        >EE-2G - Office of Freedomcar and Vehicle Technologies Program</fullName>
                <label
        >EE-2G - Office of Freedomcar and Vehicle Technologies Program</label>
            </value>
            <value>
                <fullName
        >EE-2H - Office of Hydrogen Fuel Cells and Infrastructure Tech Program</fullName>
                <label
        >EE-2H - Office of Hydrogen Fuel Cells and Infrastructure Tech Program</label>
            </value>
            <value>
                <fullName
        >EE-2J - Office of Building Technologies Program</fullName>
                <label>EE-2J - Office of Building Technologies Program</label>
            </value>
            <value>
                <fullName
        >EE-2K - Office of Weatherization and Intergovernmental Program</fullName>
                <label
        >EE-2K - Office of Weatherization and Intergovernmental Program</label>
            </value>
            <value>
                <fullName
        >EE-2L - Office of Federal Energy Management Program</fullName>
                <label
        >EE-2L - Office of Federal Energy Management Program</label>
            </value>
            <value>
                <fullName>EE-30 - DAS for Business Administration</fullName>
            </value>
            <value>
                <fullName>EE-3A - Office of Program Execution Support</fullName>
            </value>
            <value>
                <fullName
        >EE-3B - Office of Planning Budget Formulation and Analysis</fullName>
                <label
        >EE-3B - Office of Planning Budget Formulation and Analysis</label>
            </value>
            <value>
                <fullName
        >EE-3C - Office of Information and Business Management Systems</fullName>
                <label
        >EE-3C - Office of Information and Business Management Systems</label>
            </value>
            <value>
                <fullName>EE-3V - Vehicle Technologies Office</fullName>
            </value>
            <value>
                <fullName
        >EE-4W - Wind and Water Power Technologies Office</fullName>
                <label>EE-4W - Wind and Water Power Technologies Office</label>
            </value>
            <value>
                <fullName>EI-A - Energy Information Administration</fullName>
            </value>
            <value>
                <fullName>EPSA-10 - Office of Resource Management</fullName>
            </value>
            <value>
                <fullName
        >EPSA-20 - Office of Energy Policy and Systems Analysis (EPSA)</fullName>
                <label
        >EPSA-20 - Office of Energy Policy and Systems Analysis (EPSA)</label>
            </value>
            <value>
                <fullName
        >EPSA-40 - Office of EPSA, Energy Systems and Integration</fullName>
                <label
        >EPSA-40 - Office of EPSA, Energy Systems and Integration</label>
            </value>
            <value>
                <fullName>FE-1 - Office of Fossil Energy</fullName>
            </value>
            <value>
                <fullName>FE-20 - Office of Coal and Power Systems</fullName>
            </value>
            <value>
                <fullName>FE-22 - Clean Energy Systems</fullName>
            </value>
            <value>
                <fullName
        >FE-24 - Sequestration Hydrogen and Clean Coal Fuels</fullName>
                <label
        >FE-24 - Sequestration Hydrogen and Clean Coal Fuels</label>
            </value>
            <value>
                <fullName>FE-26 - Planning and Environmental Analysis</fullName>
            </value>
            <value>
                <fullName>FE-27 - Clean Energy Collaboration</fullName>
            </value>
            <value>
                <fullName
        >FE-3 - Office of Budget and Financial Management</fullName>
                <label>FE-3 - Office of Budget and Financial Management</label>
            </value>
            <value>
                <fullName
        >FE-30 - Office of Natural Gas and Petroleum Technology</fullName>
                <label
        >FE-30 - Office of Natural Gas and Petroleum Technology</label>
            </value>
            <value>
                <fullName>FE-32 - Research and Development</fullName>
            </value>
            <value>
                <fullName>FE-34 - Import Export Activities</fullName>
            </value>
            <value>
                <fullName>FE-35 - Planning and Environmental Analysis</fullName>
            </value>
            <value>
                <fullName>FE-40 - Office of Petroleum Reserves</fullName>
            </value>
            <value>
                <fullName>FE-42 - Planning and Engineering</fullName>
            </value>
            <value>
                <fullName>FE-43 - Operations and Readiness</fullName>
            </value>
            <value>
                <fullName
        >FE-6 - Office of Environmental Security Safety and Health</fullName>
                <label
        >FE-6 - Office of Environmental Security Safety and Health</label>
            </value>
            <value>
                <fullName>HS - Office of Health, Safety, and Security</fullName>
            </value>
            <value>
                <fullName
        >HS-20 - Office of Nuclear Safety and Environment</fullName>
                <label>HS-20 - Office of Nuclear Safety and Environment</label>
            </value>
            <value>
                <fullName>HS-30 - Office of Corporate Safety Analysis</fullName>
            </value>
            <value>
                <fullName>IA-33 - Office of American Affairs</fullName>
            </value>
            <value>
                <fullName
        >IA-41 - Office of International Climate and Clean Energy</fullName>
                <label
        >IA-41 - Office of International Climate and Clean Energy</label>
            </value>
            <value>
                <fullName>NA-11 - Stockpile Stewardship</fullName>
            </value>
            <value>
                <fullName
        >NA-22 - Office of Nonproliferation and Verification Research and Development</fullName>
                <label
        >NA-22 - Office of Nonproliferation and Verification Research and Development</label>
            </value>
            <value>
                <fullName>NE-1 - Office of Nuclear Energy</fullName>
            </value>
            <value>
                <fullName>NE-10 - Resource Management</fullName>
            </value>
            <value>
                <fullName>NE-20 - Advanced Nuclear Research</fullName>
            </value>
            <value>
                <fullName>NE-2_2 - Office Operations and Management</fullName>
            </value>
            <value>
                <fullName>NE-2_3 - Office of Nuclear Operations</fullName>
            </value>
            <value>
                <fullName>NE-2_4 - Office of Technology</fullName>
            </value>
            <value>
                <fullName>NE-30 - Nuclear Power Systems</fullName>
            </value>
            <value>
                <fullName>NE-40 - Nuclear Facilities Management</fullName>
            </value>
            <value>
                <fullName>NE-50 - Space and Defense Power Systems</fullName>
            </value>
            <value>
                <fullName>NE-60 - Nuclear Fuel Supply Security</fullName>
            </value>
            <value>
                <fullName>NE-7 - Nuclear Reactor Technology</fullName>
            </value>
            <value>
                <fullName
        >NE-70 - Integrated Safety and Project Management</fullName>
                <label>NE-70 - Integrated Safety and Project Management</label>
            </value>
            <value>
                <fullName>OE-40 - NETL Site Office</fullName>
            </value>
            <value>
                <fullName>OE-1.1 - Resource Management Staff</fullName>
            </value>
            <value>
                <fullName
        >OE-10 - Deputy Assistant Secretary for Research and Development</fullName>
                <label
        >OE-10 - Deputy Assistant Secretary for Research and Development</label>
            </value>
            <value>
                <fullName>OP - Office of Policy</fullName>
            </value>
            <value>
                <fullName
        >PI-1 - Assistant Secretary for Policy and International Affairs</fullName>
                <label
        >PI-1 - Assistant Secretary for Policy and International Affairs</label>
            </value>
            <value>
                <fullName
        >RW-1 - Office of Civilian Radioactive Waste Management</fullName>
                <label
        >RW-1 - Office of Civilian Radioactive Waste Management</label>
            </value>
            <value>
                <fullName
        >RW-2E - Office of Strategy and Program Development</fullName>
                <label
        >RW-2E - Office of Strategy and Program Development</label>
            </value>
            <value>
                <fullName
        >RW-40E - Office of Science and Technology and International</fullName>
                <label
        >RW-40E - Office of Science and Technology and International</label>
            </value>
            <value>
                <fullName
        >SC-2 - Office of the Principal Deputy Director</fullName>
                <label>SC-2 - Office of the Principal Deputy Director</label>
            </value>
            <value>
                <fullName>SC-21 - Office of Budget</fullName>
            </value>
            <value>
                <fullName
        >SC-24 - Office of Engineering and Technology</fullName>
                <label>SC-24 - Office of Engineering and Technology</label>
            </value>
            <value>
                <fullName
        >SC-24.2 - Accelerator R&amp;D and Production</fullName>
                <label>SC-24.2 - Accelerator R&amp;D and Production</label>
            </value>
            <value>
                <fullName>SC-24.3 - Isotope R&amp;D and Production</fullName>
            </value>
            <value>
                <fullName
        >SC-3 - Director Office of the Deputy for Science Programs</fullName>
                <label
        >SC-3 - Director Office of the Deputy for Science Programs</label>
            </value>
            <value>
                <fullName
        >SC-3.2 - Office of Scientific and Technical Information</fullName>
                <label
        >SC-3.2 - Office of Scientific and Technical Information</label>
            </value>
            <value>
                <fullName
        >SC-3.3 - Office of Workforce Development for Teachers and Scientists</fullName>
                <label
        >SC-3.3 - Office of Workforce Development for Teachers and Scientists</label>
            </value>
            <value>
                <fullName
        >SC-31 - Office of Advanced Scientific Computing Research</fullName>
                <label
        >SC-31 - Office of Advanced Scientific Computing Research</label>
            </value>
            <value>
                <fullName
        >SC-31.1 - Computational Science Research and Partnership (SCIDAC) Division</fullName>
                <label
        >SC-31.1 - Computational Science Research and Partnership (SCIDAC) Division</label>
            </value>
            <value>
                <fullName>SC-31.2 - Facilities Division</fullName>
            </value>
            <value>
                <fullName
        >SC-31.3 - Advanced Computing Technology Division</fullName>
                <label>SC-31.3 - Advanced Computing Technology Division</label>
            </value>
            <value>
                <fullName>SC-32 - Office of Basic Energy Sciences</fullName>
            </value>
            <value>
                <fullName
        >SC-32.1 - Chemical Sciences, Geosciences, and Biosciences Division</fullName>
                <label
        >SC-32.1 - Chemical Sciences, Geosciences, and Biosciences Division</label>
            </value>
            <value>
                <fullName
        >SC-32.2 - Materials Sciences and Engineering Division</fullName>
                <label
        >SC-32.2 - Materials Sciences and Engineering Division</label>
            </value>
            <value>
                <fullName
        >SC-32.3 - Scientific User Facilities Division</fullName>
                <label>SC-32.3 - Scientific User Facilities Division</label>
            </value>
            <value>
                <fullName
        >SC-33 - Office of Biological and Environmental Research</fullName>
                <label
        >SC-33 - Office of Biological and Environmental Research</label>
            </value>
            <value>
                <fullName
        >SC-33.1 - Earth and Environmental System Science Division</fullName>
                <label
        >SC-33.1 - Earth and Environmental System Science Division</label>
            </value>
            <value>
                <fullName
        >SC-33.2 - Biological Systems Science Division</fullName>
                <label>SC-33.2 - Biological Systems Science Division</label>
            </value>
            <value>
                <fullName>SC-34 - Office of Fusion Energy Sciences</fullName>
            </value>
            <value>
                <fullName
        >SC-34.1 - Facilities, Operations, and Project Division</fullName>
                <label
        >SC-34.1 - Facilities, Operations, and Project Division</label>
            </value>
            <value>
                <fullName>SC-34.2 - Research Division</fullName>
            </value>
            <value>
                <fullName>SC-35 - Office of High Energy Physics</fullName>
            </value>
            <value>
                <fullName>SC-35.1 - Research and Technology Division</fullName>
            </value>
            <value>
                <fullName>SC-35.2 - Facilities Division</fullName>
            </value>
            <value>
                <fullName>SC-36 - Office of Nuclear Physics</fullName>
            </value>
            <value>
                <fullName>SC-36.1 - Physics Research Division</fullName>
            </value>
            <value>
                <fullName
        >SC-36.2 - Facilities and Project Management Division</fullName>
                <label
        >SC-36.2 - Facilities and Project Management Division</label>
            </value>
            <value>
                <fullName
        >SC-4 - Office of the Deputy Director for Field Operations</fullName>
                <label
        >SC-4 - Office of the Deputy Director for Field Operations</label>
            </value>
            <value>
                <fullName
        >SC-41 - Office of Field Safety, Security, and Infrastructure</fullName>
                <label
        >SC-41 - Office of Field Safety, Security, and Infrastructure</label>
            </value>
            <value>
                <fullName>SC-42 - Office of Laboratory Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>