force-app/main/default/objects/Opportunity/fields/Human_Animal_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Human_Animal_Subjects__c</fullName>
    <label>Human/Animal Subjects</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>