force-app/main/default/objects/Opportunity/fields/Indefinite_Open__c.field-meta.xml
<CustomField>
    <fullName>Indefinite_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indefinite/Open</label>
    <type>Checkbox</type>
</CustomField>