force-app/main/default/objects/Opportunity/fields/Intellectual_Property__c.field-meta.xml
<CustomField>
    <fullName>Intellectual_Property__c</fullName>
    <label>Intellectual Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>