force-app/main/default/objects/Opportunity/fields/Is_CRADA__c.field-meta.xml
<CustomField>
    <fullName>Is_CRADA__c</fullName>
    <formula>IF(CRADA_Count__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CRADA?</label>
    <type>Checkbox</type>
</CustomField>