force-app/main/default/objects/Opportunity/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If locked, a validation rule will prevent any updates</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>