force-app/main/default/objects/Opportunity/fields/Is_Milestone_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Milestone_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Milestone Approved?</label>
    <type>Checkbox</type>
</CustomField>