force-app/main/default/objects/Opportunity/fields/IWO_Amendment_Number__c.field-meta.xml
<CustomField>
    <fullName>IWO_Amendment_Number__c</fullName>
    <label>IWO Amendment Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>