force-app/main/default/objects/Opportunity/fields/IWO_Specialist__c.field-meta.xml
<CustomField>
    <fullName>IWO_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IWO Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IWO_Specialist__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesKv7y</relationshipName>
    <type>Lookup</type>
</CustomField>