force-app/main/default/objects/Opportunity/fields/Last_Cost_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cost_Date__c</fullName>
    <description>Last Cost Date</description>
    <inlineHelpText>Last Cost Date</inlineHelpText>
    <label>Last Cost Date</label>
    <type>Date</type>
</CustomField>