force-app/main/default/objects/Opportunity/fields/Limited_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Limited_Term_Date__c</fullName>
    <label>Limited Term Date</label>
    <type>Date</type>
</CustomField>