force-app/main/default/objects/Opportunity/fields/Market_Sector__c.field-meta.xml
<CustomField>
    <fullName>Market_Sector__c</fullName>
    <label>Market Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>