force-app/main/default/objects/Opportunity/fields/Master_Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Master_Scope_of_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Select if this proposal is a Master Scope of Work</inlineHelpText>
    <label>Master Scope of Work</label>
    <type>Checkbox</type>
</CustomField>