force-app/main/default/objects/Opportunity/fields/Milestone_Title__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Title__c</fullName>
    <label>Milestone Title</label>
    <type>TextArea</type>
</CustomField>