force-app/main/default/objects/Opportunity/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestones</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>