force-app/main/default/objects/Opportunity/fields/Minimum_Standard_1_Additional_Details_c__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Standard_1_Additional_Details_c__c</fullName>
    <label>Response</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>