force-app/main/default/objects/Opportunity/fields/Minimum_Standard_3__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Standard_3__c</fullName>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No__gvs</valueSetName>
    </valueSet>
</CustomField>