force-app/main/default/objects/Opportunity/fields/Minimum_Standard_4_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Standard_4_Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>