force-app/main/default/objects/Opportunity/fields/MSOF__c.field-meta.xml
<CustomField>
    <fullName>MSOF__c</fullName>
    <inlineHelpText>The Material and Services Order Form (MSOF) is used for non-research and development projects where there are no intellectual property (patents, trademarks, copyrights) concerns.</inlineHelpText>
    <label>MSOF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>