force-app/main/default/objects/Opportunity/fields/Multi_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Multi_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Proposal</label>
    <type>Checkbox</type>
</CustomField>