force-app/main/default/objects/Opportunity/fields/NEPA_Requirements__c.field-meta.xml
<CustomField>
    <fullName>NEPA_Requirements__c</fullName>
    <label>NEPA Requirements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>