force-app/main/default/objects/Opportunity/fields/No_Cost_Time_Extension__c.field-meta.xml
<CustomField>
    <fullName>No_Cost_Time_Extension__c</fullName>
    <label>No Cost Time Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No__gvs</valueSetName>
    </valueSet>
</CustomField>