force-app/main/default/objects/Opportunity/fields/Non_Federal_SPP__c.field-meta.xml
<CustomField>
    <fullName>Non_Federal_SPP__c</fullName>
    <label>Non-Federal SPP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No__gvs</valueSetName>
    </valueSet>
</CustomField>