force-app/main/default/objects/Opportunity/fields/Non_Standard_Equipment_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Equipment_Utilized__c</fullName>
    <inlineHelpText>Please detail what non-standard office equipment will be utilized.</inlineHelpText>
    <label>Non-Standard Equipment Utilized</label>
    <type>TextArea</type>
</CustomField>