force-app/main/default/objects/Opportunity/fields/Non_Standard_Office_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Office_Equipment__c</fullName>
    <inlineHelpText
  >Will the project require the use of equipment outside of standard office equipment and computers?</inlineHelpText>
    <label>Non-Standard Office Equipment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>